--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 azurestorage.queues.transactionactivatedevents.name=${TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionclosuresentevents.name=${TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionexpiredevents.name=${TRANSACTION_EXPIRED_EVENT_QUEUE_NAME}
+azurestorage.queues.transactionsrefund.name=${TRANSACTIONS_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionrefundretry.name=${TRANSACTION_REFUND_RETRY_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTION_CLOSE_PAYMENT_RETRY_EVENT_QUEUE_NAME}
 azurestorage.connectionstring=${QUEUE_CONNECTION_STRING}
+
 spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_QUEUE_KEY}
 spring.cloud.azure.storage.queue.account-name=${ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME}
 spring.cloud.azure.storage.queue.endpoint=${ECOMMERCE_STORAGE_QUEUE_ENDPOINT}
