--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -2,6 +2,7 @@ azurestorage.queues.transactionauthrequestedevents.name=transactionauthrequested
 azurestorage.queues.transactionactivatedevents.name=transactionactivatedtevents
 azurestorage.queues.transactionclosuresentevents.name=transactionclosuresentevents
 azurestorage.queues.transactionexpiredevents.name=transactionexpiredevents
+azurestorage.queues.transactionsrefund.name=transactionrefundevents
 azurestorage.queues.transactionrefundretry.name=transactionrefundretryevents
 azurestorage.queues.transactionclosepaymentretry.name=transactionclosepaymentretryevents
 
