fix: helm values to string

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -85,10 +85,10 @@ microservice-chart:
     MONGO_SSL_ENABLED: "true"
     ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopadweuecommercesa
     ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopadweuecommercesa.queue.core.windows.net/pagopadweuecommercesa
-    REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
-    REFUND_RETRY_EVENT_MAX_ATTEMPTS: 3
-    CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
-    CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: 3
+    REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
+    REFUND_RETRY_EVENT_MAX_ATTEMPTS: "3"
+    CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
+    CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: "3"
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
