--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -34,10 +34,10 @@ microservice-chart:
       MONGO_SSL_ENABLED: "true"
       ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopauweuecommercesa
       ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopauweuecommercesa.queue.core.windows.net/pagopauweuecommercesa
-      REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
-      REFUND_RETRY_EVENT_MAX_ATTEMPTS: 3
-      CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
-      CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: 3
+      REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
+      REFUND_RETRY_EVENT_MAX_ATTEMPTS: "3"
+      CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
+      CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: "3"
     envSecret:
       ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
       MONGO_PASSWORD: mongo-ecommerce-password
@@ -124,10 +124,10 @@ microservice-chart:
     MONGO_SSL_ENABLED: "true"
     ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopauweuecommercesa
     ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopauweuecommercesa.queue.core.windows.net/pagopauweuecommercesa
-    REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
-    REFUND_RETRY_EVENT_MAX_ATTEMPTS: 3
-    CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
-    CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: 3
+    REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
+    REFUND_RETRY_EVENT_MAX_ATTEMPTS: "3"
+    CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
+    CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: "3"
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
