--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -45,7 +45,7 @@ microservice-chart:
       QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommerceschedulerservice
-    tag: "latest"
+    tag: "0.0.3"
     pullPolicy: Always
   livenessProbe:
     httpGet:
