add close queue

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -1,5 +1,6 @@
 azurestorage.queues.transactionauthrequestedevents.name=transactionauthrequestedtevents
 azurestorage.queues.transactionactivatedevents.name=transactionactivatedtevents
+azurestorage.queues.transactionclosepayment.name=transactionclosepayment
 azurestorage.queues.transactionclosepaymentretry.name=transactionclosepaymentretry
 azurestorage.queues.transactionexpiration.name=transactionexpiration
 azurestorage.queues.transactionsrefund.name=transactionrefundevents
