--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -68,6 +68,7 @@ microservice-chart:
           metricAggregationType: Count
           targetValue: "30"
   envConfig:
+    TRANSACTIONS_CLOSE_PAYMENT_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-close-payment-queue
     TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-close-payment-retry-queue
     TRANSACTIONS_EXPIRATION_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-expiration-queue
     TRANSACTIONS_REFUND_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-retry-queue
