--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -73,10 +73,13 @@ microservice-chart:
     TRANSACTIONS_EXPIRATION_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-expiration-queue
     TRANSACTIONS_REFUND_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-retry-queue
     TRANSACTIONS_REFUND_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-queue
-    AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
+    TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-notifications-retry-queue
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
+    NOTIFICATIONS_SERVICE_URI: https://api.dev.platform.pagopa.it/ecommerce/notifications-service/v1
+    NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
+    NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
     NODO_URI: https://api.dev.platform.pagopa.it/nodo/nodo-per-pm/v2
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
@@ -90,12 +93,17 @@ microservice-chart:
     REFUND_RETRY_EVENT_MAX_ATTEMPTS: "3"
     CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
     CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: "3"
+    NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS: "600"
+    NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS: "3"
+    PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
     QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
+    NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
+    PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
