feat: add notification queue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ azurestorage.queues.transactionrefundretry.name=${TRANSACTIONS_REFUND_RETRY_QUEU
 azurestorage.queues.transactionclosepayment.name=${TRANSACTIONS_CLOSE_PAYMENT_QUEUE_NAME}
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotificationretry.name=${TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME}
+azurestorage.queues.transactionnotification.name=${TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME}
 azurestorage.connectionstring=${QUEUE_CONNECTION_STRING}
 
 spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_QUEUE_KEY}
