--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -74,6 +74,7 @@ microservice-chart:
     TRANSACTIONS_REFUND_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-retry-queue
     TRANSACTIONS_REFUND_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-queue
     TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-notifications-retry-queue
+    TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-notifications-queue
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
