feat: retry on notification email (#50)
* feat: retry on notification email

* feat: taken data from event

* feat: update uat values

* merge main

* fix: add tests

* fix: add tests

* fix: misc fixes

* fix: add tests

* fix: update commons version

* fix: update commons version

* fix: add verifications to tests

* fix: refactoring + test

* fix: queue name

* fix: removed unused method

* fix: spotless apply

* fix: fees and total amount for success email

* fix: helm values uat

* Chk 1309 notification send (#56)

* fix: add tests

* feat: add notification queue

* feat: add TransactionNotificationsQueueConsumer logic

* feat: temp commmit

* merge main

* rebase + spotless apply

* fix: add tests

* fix: code duplication

* fix: env

* fix: update commons version

* fix: update status to NOTIFICATION_ERROR before enqueue retry event

* fix: add verifications to tests

* fix: add refund logic for notification send payment result KO

* fix: comment

* fix: add refund on notification retry

* fix: merge closure error branch

* fix: do not perform refund for send payment result OK transaction stuck in NOTIFICATION_ERROR

* fix: helm values uat

* fix: add fixme

* fix: code refactoring

* fix: add system properties to README + removed unused property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ azurestorage.queues.transactionsrefund.name=${TRANSACTIONS_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionrefundretry.name=${TRANSACTIONS_REFUND_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionclosepayment.name=${TRANSACTIONS_CLOSE_PAYMENT_QUEUE_NAME}
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
+azurestorage.queues.transactionnotificationretry.name=${TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME}
+azurestorage.queues.transactionnotification.name=${TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME}
 azurestorage.connectionstring=${QUEUE_CONNECTION_STRING}
 
 spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_QUEUE_KEY}
@@ -18,8 +20,6 @@ paymentTransactionsGateway.uri=${PAYMENT_TRANSACTIONS_GATEWAY_URI}/
 paymentTransactionsGateway.readTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT}
 paymentTransactionsGateway.connectionTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT}
 
-scheduler.authorizationRequestedEventTimeoutSeconds=${AUTH_REQUESTED_TIMEOUT_SECONDS}
-
 server.port=9000
 
 management.endpoint.health.probes.enabled=true
@@ -29,3 +29,14 @@ refundRetry.maxAttempts=${REFUND_RETRY_EVENT_MAX_ATTEMPTS}
 
 closePaymentRetry.eventOffsetSeconds=${CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 closePaymentRetry.maxAttempts=${CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS}
+
+notificationRetry.eventOffsetSeconds=${NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS}
+notificationRetry.maxAttempts=${NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS}
+
+notificationsService.uri=${NOTIFICATIONS_SERVICE_URI}
+notificationsService.readTimeout=${NOTIFICATIONS_SERVICE_READ_TIMEOUT}
+notificationsService.connectionTimeout=${NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT}
+notificationsService.apiKey=${NOTIFICATIONS_SERVICE_API_KEY}
+
+confidentialDataManager.personalDataVault.apiKey=${PERSONAL_DATA_VAULT_API_KEY}
+confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_BASE_PATH}
