--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ ECOMMERCE_STORAGE_QUEUE_ENDPOINT=http://127.0.0.1:10001/devstoreaccount1
 PAYMENT_TRANSACTIONS_GATEWAY_URI="http://127.0.0.1:8000"
 PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT=10000
 PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT=10000
+PAYMENT_TRANSACTIONS_GATEWAY_API_KEY=PAYMENT_TRANSACTIONS_GATEWAY_API_KEY
 
 NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"idBrokerPsp\",\"password\":\"password\"}"
 NODO_URI="http://127.0.0.1:3002/nodo-per-pm/v2"
