[CHK-1454] fix: test app properties

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -20,6 +20,7 @@ spring.data.mongodb.database=ecommerce
 paymentTransactionsGateway.uri=http://pagopa-payment-transactions-gateway:8080
 paymentTransactionsGateway.readTimeout=1000
 paymentTransactionsGateway.connectionTimeout=1000
+paymentTransactionsGateway.apiKey=API_KEY
 
 server.port=9000
 
