--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 			**/it/pagopa/transactions/**
 		</sonar.coverage.exclusions>
 		<spotless.version>2.28.0</spotless.version>
+		<mock-web-server.version>4.11.0</mock-web-server.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -177,6 +178,18 @@
 			<artifactId>pagopa-ecommerce-commons</artifactId>
 			<version>${pagopa-ecommerce-commons.version}</version>
 			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>${mock-web-server.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>mockwebserver</artifactId>
+			<version>${mock-web-server.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
