fix: validate retry event visibility timeout (#89)
* fix: validate retry event visibility timeout

* fix: add tests

* fix: suggestions

* fix: log

* fix: BaseTransactionWithClosureError hierarchy

* fix: update commons version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ refundRetry.maxAttempts=${REFUND_RETRY_EVENT_MAX_ATTEMPTS}
 
 closePaymentRetry.eventOffsetSeconds=${CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 closePaymentRetry.maxAttempts=${CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS}
+closePaymentRetry.paymentTokenValidityTimeOffset=${CLOSE_PAYMENT_RETRY_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET:10}
 
 notificationRetry.eventOffsetSeconds=${NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 notificationRetry.maxAttempts=${NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS}
