--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,6 @@ notificationsService.apiKey=${NOTIFICATIONS_SERVICE_API_KEY}
 
 confidentialDataManager.personalDataVault.apiKey=${PERSONAL_DATA_VAULT_API_KEY}
 confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_BASE_PATH}
+
+sendPaymentResult.timeoutSeconds=${SEND_PAYMENT_RESULT_TIMEOUT_SECONDS}
+sendPaymentResult.expirationOffset=${SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS}
