--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -43,3 +43,6 @@ notificationsService.apiKey=notifications-service-api-key
 
 confidentialDataManager.personalDataVault.apiKey=apiKey
 confidentialDataManager.personalDataVault.apiBasePath=localhost
+
+sendPaymentResult.timeoutSeconds=3900
+sendPaymentResult.expirationOffset=10
