--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ NOTIFICATION_RETRY_EVENT_BASE_INTERVAL_SECONDS=600
 NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS=3
 PERSONAL_DATA_VAULT_API_KEY=personal-data-vault-api-key
 PERSONAL_DATA_VAULT_API_BASE_PATH="http://pagopa-pdv-mock:8080"
+
+SEND_PAYMENT_RESULT_TIMEOUT_SECONDS=3900
+SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS=5
