--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -53,6 +53,8 @@ microservice-chart:
       ELASTIC_APM_LOG_SENDING: "false"
       SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
       SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
+      ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service-blue
+      ECS_SERVICE_ENVIRONMENT: uat
     envSecret:
       ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
       MONGO_PASSWORD: mongo-ecommerce-password
@@ -162,6 +164,8 @@ microservice-chart:
     ELASTIC_APM_LOG_SENDING: "false"
     SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
     SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
+    ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service
+    ECS_SERVICE_ENVIRONMENT: uat
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
