--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -52,6 +52,7 @@ microservice-chart:
       ELASTIC_APM_LOG_SENDING: "false"
       SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
       SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
+      TRANSIENT_QUEUES_TTL_SECONDS: "2592000"
       ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service-blue
       ECS_SERVICE_ENVIRONMENT: prod
     envSecret:
@@ -164,6 +165,7 @@ microservice-chart:
     SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
     ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service
     ECS_SERVICE_ENVIRONMENT: prod
+    TRANSIENT_QUEUES_TTL_SECONDS: "2592000"
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
