--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,14 @@ azurestorage.deadletter.connectionstring=${QUEUE_DEADLETTER_CONNECTION_STRING}
 azurestorage.queues.transientQueues.ttlSeconds=${TRANSIENT_QUEUES_TTL_SECONDS:604800}
 azurestorage.queues.deadLetterQueue.ttlSeconds=${DEAD_LETTER_QUEUE_TTL_SECONDS:-1}
 
+spring.cloud.azure.storage.transient.queue.account-key=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY}
+spring.cloud.azure.storage.transient.queue.account-name=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ACCOUNT_NAME}
+spring.cloud.azure.storage.transient.queue.endpoint=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ENDPOINT}
+
+spring.cloud.azure.storage.deadletter.queue.account-key=${ECOMMERCE_STORAGE_DEADLETTER_QUEUE_KEY}
+spring.cloud.azure.storage.deadletter.queue.account-name=${ECOMMERCE_STORAGE_DEADLETTER_QUEUE_ACCOUNT_NAME}
+spring.cloud.azure.storage.deadletter.queue.endpoint=${ECOMMERCE_STORAGE_DEADLETTER_QUEUE_ENDPOINT}
+
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
