[CHK-1652] update queue variables (#105)
* rename env variables

* restore original storage queue key

* remove spring cloud azure storage queue key-value ref

* update values dev and application properties

* update application properties

* update readme and helm values

---------

Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,15 @@ azurestorage.queues.transactionclosepayment.name=${TRANSACTIONS_CLOSE_PAYMENT_QU
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotificationretry.name=${TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionnotification.name=${TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME}
+azurestorage.transient.connectionstring=${QUEUE_TRANSIENT_CONNECTION_STRING}
 azurestorage.queues.deadletter.name=${TRANSACTIONS_DEAD_LETTER_QUEUE_NAME}
+azurestorage.deadletter.connectionstring=${QUEUE_DEADLETTER_CONNECTION_STRING}
 azurestorage.queues.transientQueues.ttlSeconds=${TRANSIENT_QUEUES_TTL_SECONDS:604800}
 azurestorage.queues.deadLetterQueue.ttlSeconds=${DEAD_LETTER_QUEUE_TTL_SECONDS:-1}
-azurestorage.connectionstring=${QUEUE_CONNECTION_STRING}
 
-spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_QUEUE_KEY}
-spring.cloud.azure.storage.queue.account-name=${ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME}
-spring.cloud.azure.storage.queue.endpoint=${ECOMMERCE_STORAGE_QUEUE_ENDPOINT}
+spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY}
+spring.cloud.azure.storage.queue.account-name=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ACCOUNT_NAME}
+spring.cloud.azure.storage.queue.endpoint=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_ENDPOINT}
 
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
