feat(serialization): use strict (de)serialization of queue events

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>17</java.version>
 		<kotlin.version>1.6.21</kotlin.version>
 		<kotlinx-coroutines.version>1.6.2</kotlinx-coroutines.version>
-		<spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
+		<spring-cloud-azure.version>4.9.0</spring-cloud-azure.version>
 		<jacoco.version>0.8.8</jacoco.version>
 		<pagopa-ecommerce-commons.version>0.18.2</pagopa-ecommerce-commons.version>
 		<sonar.coverage.exclusions> <!-- the members of the following list should be in the same line -->
@@ -82,12 +82,10 @@
 		<dependency>
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-cloud-azure-starter-integration-storage-queue</artifactId>
-			<version>4.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-storage-queue</artifactId>
-			<version>12.13.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
@@ -106,13 +104,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.azure</groupId>
-			<artifactId>azure-core</artifactId>
-			<version>1.40.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.azure</groupId>
 			<artifactId>azure-core-serializer-json-jackson</artifactId>
-			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -159,6 +151,10 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
@@ -236,6 +232,11 @@
 			<groupId>io.opentelemetry</groupId>
 			<artifactId>opentelemetry-semconv</artifactId>
 			<version>1.27.0-alpha</version>
+		</dependency>
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-core-tracing-opentelemetry</artifactId>
+			<version>1.0.0-beta.36</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
