feat(configuration) - added redis configuration

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,11 @@ MONGO_PORT=27017
 MONGO_USERNAME=admin
 MONGO_PASSWORD=password
 
+REDIS_HOST="pagopa-ecommerce-redis"
+REDIS_PORT=6379
+REDIS_PASSWORD="redis_password"
+REDIS_SSL_ENABLED=false
+
 NOTIFICATIONS_SERVICE_API_KEY=api-key
 NOTIFICATIONS_SERVICE_URI="http://pagopa-ecommerce-traefik/notifications-service"
 NOTIFICATIONS_SERVICE_READ_TIMEOUT=10000
