--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -17,6 +17,10 @@ spring.cloud.azure.storage.queue.endpoint=http://127.0.0.1:10001/devstoreaccount
 nodo.uri=https://localhost/nodo
 nodo.readTimeout=10000
 nodo.connectionTimeout=10000
+spring.redis.host=redis
+spring.redis.password=redis
+spring.redis.port=9999
+spring.redis.ssl=false
 spring.data.mongodb.uri=mongodb://mongo:mongo@$mongo:6080/
 spring.data.mongodb.database=ecommerce
 paymentTransactionsGateway.uri=http://pagopa-payment-transactions-gateway:8080
